headr banner ready

--- a/index.html
+++ b/index.html
@@ -21,20 +21,29 @@
         <link rel="stylesheet" href="css/style.css" >
     </head>
     <body>
-        <div class="container">
             <header>
-                <nav class="navbar">
-                    <ul class="menu">
-                        <li class="menu-li"><a href="#">Home</a></li>
-                        <li class="menu-li"><a href="#">Gallery</a></li>
-                        <li class="menu-li menu-li-logo"><a href="#"><img id="menu-logo" src="assets/images/sanaya_small copy.gif"></a></li>
-                        <li class="menu-li"><a href="#">About</a></li>
-                        <li class="menu-li"><a href="#">Contact</a></li>
+                <img class="logo" src="assets/images/sanaya_small copy.gif" alt="Shanaya Flower Farm Logo" style="max-height: 100px;">
+                <nav class="navbar-left">
+                    <ul class="nav-links">
+                        <li><a href="#"> Home </a></li>
+                        <li><a href="#">Gallery</a></li>   
+                    </ul>
+                </nav>
+                <nav class="navbar-right">
+                    <ul class="nav-links">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </header>
+            <section class="main">
+                <div class="banner">
+                        <h1>Shanaya Flowers</h1>
+                        <h5>Locally Grown With Love</h5>
+                   <!-- <img src="assets/images/banner.jpg" > -->
+                </div>
+            </section>
 
-        </div>
 
 
         <script src="js/main.js"></script>
