Blurred Background images, Some tweaks tricks

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
                 </nav>
             </header>
             <section class="main">
-                <div class="banner">
+                <div class="banner"></div>
+                    <div class="banner-text">
                         <h1>Shanaya Flowers</h1>
                         <h5>Locally Grown With Love</h5>
+                    </div>
                    <!-- <img src="assets/images/banner.jpg" > -->
-                </div>
+                
             </section>
 
 
