Working on main section on index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
                         <h5>Locally Grown With Love</h5>
                     </div>
                    <!-- <img src="assets/images/banner.jpg" > -->
-                
+                <div id="welcome" class="">
+                    <h1>Welcome to Shanaya Flower Farm</h1>
+                    <p>Shanaya Flower Farm is a local organic flower farm located in Telegoan village near Pune, Maharashtra. Founded in 2016 by Supriya Mule with the much-appreciated help of her husband Sujit. The name is inspired by their daughter Shanaya, who is as bright, happy and cheerful as flowers. Supriya uses nature’s beauty with a whimsical style as her inspiration. Not knowing what would come of this endeavor she started with her love of growing beautiful blooms which lead to her passion of creating bouquets that bring smiles for all.</p>
+                    <div id="welcome-images-container">
+                        <div class="welcome-images"><img src="assets/images/orchid-welcome-image.jpg"></div>
+                        <div class="welcome-images"><img src="assets/images/Bouquet-of-Red-Roses.jpg"></div>
+                        <div class="welcome-images"><img src="assets/images/Rose-exhibition-in-old-farm-shed.jpg"></div>
+                    </div>
+                </div>   
             </section>
 
 
