Starting over on another repo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Shanaya Flower Farm</title>
         <meta name="description" content="Shanaya Flower Farm is Pune based Flower Farm where seasonal flower roam year round &amp; It is located in Talegoa and managed by Shanaya Group, Pune... ">
         <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- OG properties-->
         <meta property="og:locale" content="en_US" />
@@ -23,7 +24,17 @@
     <body>
             <header>
                 <img class="logo" src="assets/images/sanaya_small copy.gif" alt="Shanaya Flower Farm Logo" style="max-height: 100px;">
-                <nav class="navbar-left">
+                
+                <nav class="navbar">
+                    <ul class="nav-links">
+                        <li class="navlinks-left"><a href="#"> Home </a></li>
+                        <li class="navlinks-left" ><a  href="#">Gallery</a></li>   
+                        <li class="navlinks-right"><a href="#">About</a></li>
+                        <li class="navlinks-right"><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                
+               <!-- <nav class="navbar-left">
                     <ul class="nav-links">
                         <li><a href="#"> Home </a></li>
                         <li><a href="#">Gallery</a></li>   
@@ -34,7 +45,12 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
-                </nav>
+                </nav>-->
+                <div class="burger">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
             </header>
             <section class="main">
                 <div class="banner"></div>
@@ -43,13 +59,14 @@
                         <h5>Locally Grown With Love</h5>
                     </div>
                    <!-- <img src="assets/images/banner.jpg" > -->
-                <div id="welcome" class="">
+                <div class="welcome-container">
                     <h1>Welcome to Shanaya Flower Farm</h1>
                     <p>Shanaya Flower Farm is a local organic flower farm located in Telegoan village near Pune, Maharashtra. Founded in 2016 by Supriya Mule with the much-appreciated help of her husband Sujit. The name is inspired by their daughter Shanaya, who is as bright, happy and cheerful as flowers. Supriya uses nature’s beauty with a whimsical style as her inspiration. Not knowing what would come of this endeavor she started with her love of growing beautiful blooms which lead to her passion of creating bouquets that bring smiles for all.</p>
                     <div id="welcome-images-container">
-                        <div class="welcome-images"><img src="assets/images/orchid-welcome-image.jpg"></div>
-                        <div class="welcome-images"><img src="assets/images/Bouquet-of-Red-Roses.jpg"></div>
-                        <div class="welcome-images"><img src="assets/images/Rose-exhibition-in-old-farm-shed.jpg"></div>
+                        <img class="welcome-images" src="assets/images/orchid-welcome-image.jpg">
+                        <img class="welcome-images" src="assets/images/Bouquet-of-Red-Roses.jpg">
+                        <img class="welcome-images" src="assets/images/juliet-rose.jpg.838x0_q80.jpg">
+
                     </div>
                 </div>   
             </section>
